--- a/advanced/83-flask-WTForms/requirements.txt
+++ b/advanced/83-flask-WTForms/requirements.txt
@@ -1,5 +1,4 @@
-Bootstrap_Flask==2.2.0
-Flask==2.3.2
-WTForms==3.0.1
-Flask_WTF==1.2.1
-Werkzeug==3.0.0
+Flask==2.0.3
+Jinja2==3.1.1
+itsdangerous==2.0.1
+flask
